Fix issue with misaligned chapter number

--- a/themes/apollo/main.css
+++ b/themes/apollo/main.css
@@ -4820,7 +4820,7 @@ section.component-front h1 {
   letter-spacing: 0.05em;
   float: left;
   font-size: 64px;
-  line-height: 57px;
+  line-height: 64px;
   margin-right: 13px; }
   .chapter-number + h1 {
     margin-top: 0; }
