--- a/themes/apollo/partials/theme/openers.scss
+++ b/themes/apollo/partials/theme/openers.scss
@@ -130,7 +130,7 @@ $chapter-number-has-text: false;
 
         // Size and line-height matches h1
         font-size: 64px;
-        line-height: $line-height-default * 3;
+        line-height: 64px;
         margin-right: $text-indent;
     }
 
